--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -23,7 +23,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= will_paginate @microposts %>
 <br>
 
 <%= link_to 'New Micropost', new_micropost_path %>
